22/08/09 Julien Dutheil
* Added CMake configuration files.