@@ -1,2 +1,6 @@
+30/12/09 Julien Dutheil
+* Improved QtGraphicDevice.
+* Added class QtTools.
+
 22/08/09 Julien Dutheil
 * Added CMake configuration files.
